* Mon Jul 24 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.6.0
- Add RockyLinux 8 support

* Tue Aug 02 2022 Igor Muratov <52306882+igomura@users.noreply.github.com> - 5.5.1
- Fix include_dir templating

* Mon Nov 29 2021 Mike Riddle <mike@sicura.us> - 5.5.0
- Added the ability for users to create include clauses in sudoers

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.4.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.3.2
- Removed EL6 support

* Tue Jun 09 2020 Arjen Zonneveld <arjenz@users.noreply.github.com> - 5.3.1-0
- Fixed docs for user_list Array type

* Tue Jun 09 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.3.0-0
- Add parameters for sudo::default_entry and sudo::alias defined types

* Tue Feb 04 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.2.1-0
- Update for EL8.
- CVE-2019-14287 mitigation. See
  https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-14287
  for more information
- Do not allow the use of userid or group id of -1 when ALL or %ALL are
  used in the runas section of a sudo user specification and the version of
  sudo is earlier than 1.8.28.

* Wed Sep 25 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.2.1-0
- Deep merge user_specifications by default
- Add support for simp/simplib < 7

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 5.2.1-0
- Support puppetlabs/concat 6.x.

* Wed Jun 12 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.2.0-0
- Allow additional options in sudo::user_specification
- Add Puppet 6 support
- Remove Puppet 4 support
- Allow puppetlabs/stdlib < 7

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 5.1.2-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated URLs in the README.md

* Thu Nov 15 2018 Martin Merfort <martin.merfort@sixt.com> - 5.1.1-0
- Enable support for cmnd def_type