@@ -1,4 +1,0 @@
-<% if @comment -%>
-#<%= @comment %>
-<% end -%>
-<%= @alias_type.capitalize %>_Alias <%= @name.upcase %> = <%= Array(@_content).join(', ') %>
